Remove the ability to record all the actions ever done by the user

This results in a drastic memory leak which grows with the time
(it seems that replaying the brush actions doesn't work, both with and
without the patch)

Please test it is fast as possible then I could backport it to 2.8.

BUG:331592